[gd_scene load_steps=2 format=3 uid="uid://bxe8aolai6pvj"]

[ext_resource type="Script" path="res://game_menu.gd" id="1_enioy"]

[node name="Game_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_enioy")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerInfo" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1922.0
offset_bottom = 1085.0

[node name="PlayerNameLabel" type="Label" parent="CanvasLayer/PlayerInfo"]
layout_mode = 0
offset_left = 22.0
offset_top = 17.0
offset_right = 180.0
offset_bottom = 59.0
text = "Name:"

[node name="PlayerClassLabel" type="Label" parent="CanvasLayer/PlayerInfo"]
layout_mode = 0
offset_left = 26.0
offset_top = 50.0
offset_right = 107.0
offset_bottom = 88.0
text = "Class:"

[node name="PlayerGoldLabel" type="Label" parent="CanvasLayer/PlayerInfo"]
layout_mode = 0
offset_left = 281.0
offset_top = 18.0
offset_right = 362.0
offset_bottom = 56.0
text = "Gold
"

[node name="PlayerLevelLabel" type="Label" parent="CanvasLayer/PlayerInfo"]
layout_mode = 0
offset_left = 152.0
offset_top = 51.0
offset_right = 233.0
offset_bottom = 89.0
text = "Level:
"

[node name="PlayerExperienceLabel" type="Label" parent="CanvasLayer/PlayerInfo"]
layout_mode = 0
offset_left = 151.0
offset_top = 17.0
offset_right = 232.0
offset_bottom = 55.0
text = "Exp:"

[node name="mainMenubutton" type="Button" parent="CanvasLayer"]
offset_left = 13.0
offset_top = 960.0
offset_right = 178.0
offset_bottom = 1051.0
text = "Main Menu"

[node name="nextEncounterButton" type="Button" parent="CanvasLayer"]
offset_left = 305.0
offset_top = 428.0
offset_right = 525.0
offset_bottom = 514.0
text = "Next Encounter"

[node name="saveGameButton" type="Button" parent="CanvasLayer"]
offset_left = 194.0
offset_top = 960.0
offset_right = 359.0
offset_bottom = 1051.0
text = "Save Game
"

[connection signal="pressed" from="CanvasLayer/mainMenubutton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/saveGameButton" to="." method="_on_button_pressed"]
